domain section added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,65 @@
 
 <!-- initiative end -->
 
+<div class="domain-section">
+  <h1>Domains</h1>
+  <div class="domain">
+    <div class="card">
+      <div class="content">
+        <h2>Web Development</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+          quasi dolore et, officiis quibusdam vitae laudantium quisquam
+          ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+      <img src="./assest/web.png" alt="" />
+    </div>
 
+    <div class="card">
+      <div class="content">
+        <h2>App Development</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+          quasi dolore et, officiis quibusdam vitae laudantium quisquam
+          ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+      <img src="./assest/app.png" alt="" />
+    </div>
+  </div>
+  <div class="domain">
+      <div class="card">
+        <div class="content">
+          <h2>Coding</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+            quasi dolore et, officiis quibusdam vitae laudantium quisquam
+            ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <img src="./assest/coding.png" alt="" />
+      </div>
+
+      <div class="card">
+        <div class="content">
+          <h2> Graphic Designing</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+            quasi dolore et, officiis quibusdam vitae laudantium quisquam
+            ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
+          </p>
+          <a href="#">Read More</a>
+        </div>
+        <img src="./assest/graphic.png" alt="" />
+      </div>
+    </div>
+
+
+</div>
     <!-- message By Founder -->
     <div class="messageContainer myContainer center" style="min-height: 90vh">
       <div>
