domain-section edited

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <!-- HeroSection End -->
     <!-- initiative -->
-<div class="myContainer center" style="min-height: 70vh;">
+<div class="myContainer center" style="min-height: 100vh;">
   <div class="intiative">
     <h1 class="heading">TechNexus Initiative: Empowering Innovation and Collaboration</h1>
     <p class="Itext poppins">Step into the world ofTechNexus, where we ignite the spirit of innovation and foster collaborative breakthroughs. Our initiative is dedicated to empowering individuals and organizations to push the boundaries of technology. Join our vibrant community as we explore, experiment, and create together. Let's unlock the full potential of technology through theTechNexus Initiative.</p>
@@ -125,7 +125,7 @@
         </p>
         <a href="#">Read More</a>
       </div>
-      <img src="./assest/web.png" alt="" />
+      <img src="./Image/web.png" alt="" />
     </div>
 
     <div class="card">
@@ -138,7 +138,7 @@
         </p>
         <a href="#">Read More</a>
       </div>
-      <img src="./assest/app.png" alt="" />
+      <img src="./Image/app.png" alt="" />
     </div>
   </div>
   <div class="domain">
@@ -152,7 +152,7 @@
           </p>
           <a href="#">Read More</a>
         </div>
-        <img src="./assest/coding.png" alt="" />
+        <img src="./Image/coding.png" alt="" />
       </div>
 
       <div class="card">
@@ -165,7 +165,7 @@
           </p>
           <a href="#">Read More</a>
         </div>
-        <img src="./assest/graphic.png" alt="" />
+        <img src="./Image/graphic.png" alt="" />
       </div>
     </div>
 
