made vision section and updated colours

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css"/>
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,8 +34,8 @@
       </div>
       <div class="navlink">
         <p class="close"><i class="fa-solid fa-xmark"></i></p>
-        <a href="" class="cabin">Home</a>
-        <a href="" class="cabin">About Us</a>
+        <a href="index.html" class="cabin">Home</a>
+        <a href="about.html" class="cabin">About Us</a>
         <a href="" class="cabin">Contact Us</a>
       </div>
 
@@ -65,8 +65,7 @@
             landscape.
           </p>
 
-          <div><a href="" class="button cabin"> JOIN AS MEMBER</a></div>
-        </div>
+          <div class="btn"><a href="#">JOIN AS MEMBER</a></div>        </div>
         <!-- heroIllustraion -->
         <div class="heroIllustraion center">
           <lottie-player
@@ -117,8 +116,8 @@
   <div class="domain">
     <div class="card">
       <div class="content">
-        <h2>Web Development</h2>
-        <p>
+        <h2 class="roboto">Web Development</h2>
+        <p class="poppins">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
           quasi dolore et, officiis quibusdam vitae laudantium quisquam
           ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
@@ -130,8 +129,8 @@
 
     <div class="card">
       <div class="content">
-        <h2>App Development</h2>
-        <p>
+        <h2 class="roboto">App Development</h2>
+        <p class="poppins">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
           quasi dolore et, officiis quibusdam vitae laudantium quisquam
           ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
@@ -144,8 +143,8 @@
   <div class="domain">
       <div class="card">
         <div class="content">
-          <h2>Coding</h2>
-          <p>
+          <h2 class="roboto">Coding</h2>
+          <p class="poppins">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
             quasi dolore et, officiis quibusdam vitae laudantium quisquam
             ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
@@ -157,8 +156,8 @@
 
       <div class="card">
         <div class="content">
-          <h2> Graphic Designing</h2>
-          <p>
+          <h2 class="roboto"> Graphic Designing</h2>
+          <p class="poppins">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
             quasi dolore et, officiis quibusdam vitae laudantium quisquam
             ratione sed optio. Lorem ipsum dolor sit amet consectetur adipisicing.
